# assistant-axis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
assistant_axis/: __init__.py  generation.py  judge.py
assistant_axis/tests/: test_generation.py  test_hallucination_pipeline.py  test_import.py  test_judge.py
data/degeneration/: hallucination_trajectories.jsonl
notebooks/: hallucination_steering_demo.ipynb
pipeline/: 0_vllm_server.sh  0_vllm_server_gpt_oss_20b.sh  0_vllm_server_qwen35_27b.sh  0_vllm_server_qwen35_2B.sh  0_vllm_server_qwen35_35b.sh  0_vllm_server_qwen35_9b.sh  0_vllm_server_qwen3_14b.sh  0_vllm_server_qwen3_4b.sh  0_vllm_server_qwen3_8b.sh  1_collect_trajectories.sh  1_collect_trajectories_seq.sh  1_generate.py  2_activations.py  2_drift_activations.py  2_judge_steps.py  2_parse_trajectories.py  3_activations.py  3_activations_hf.py  3_activations_spec.py  3_drift_activations.py  3_drift_analysis.py  3_judge.py  4_compute_axis.py  4_drift_analysis.py  4_drift_steering.py  4_vectors.py  5_axis.py  5_drift_steering.py  README.md  run_pipeline.sh  vllm_smoke_test.py
pipeline/configs/: model_registry.json  swebench_qwen35_27b.yaml  swebench_qwen35_2b.yaml  swebench_qwen35_9b.yaml  swebench_qwen35b.yaml  swebench_qwen4b.yaml
pipeline/degeneration/: 1_generate.py  4_vectors.py  5_axes.py  README.md  run_quick_test.sh
src/: __init__.py  contrastive_axis.py  judge.py  models.py  trajectory.py
src/internals/: conversation.py
src/tests/: test_axis.py  test_contrastive_axis.py  test_judge.py
(+13 files in other folders)
