[project]
name = "degeneration-axis"
version = "0.1.0"
description = "Analyzing and mitigating LLM activation drift in agentic trajectories"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "transformers>=4.40",
    "accelerate",
    "huggingface_hub",
    "vllm",
    "scikit-learn",
    "numpy",
    "plotly",
    "jupyter",
    "pyarrow",
    "python-dotenv",
    "tqdm",
    "jsonlines",
    "matplotlib>=3.10.8",
    "scipy",
    "mini-swe-agent",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
